--- a/html/travellingFullscreen.html
+++ b/html/travellingFullscreen.html
@@ -1,6 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" class=" social-js">
 <head profile="http://gmpg.org/xfn/11">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
 <title>Alexus Lexus</title>
 
 <link href="../images/favicon.ico" rel="shortcut icon">
@@ -10,11 +12,11 @@
 <link rel="stylesheet" href="css/leaflet.css" type="text/css" >
 <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 <link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/progressjs.min.css">
 <link rel="stylesheet" href="css/jquery.growl.css">
+<link rel="stylesheet" href="css/easy-button.css">
+<link rel="stylesheet" href="css/bootstrap.min.css">
 
 <script type="text/javascript" src="js/leaflet.js"></script>
-<script type="text/javascript" src="js/progress.min.js"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
 <script type="text/javascript" src="http://matchingnotes.com/javascripts/leaflet-google.js"></script>
 <script type="text/javascript" src="js/arc.js"></script>
@@ -25,6 +27,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.growl.js"></script>
 <script src="js/exif.js"></script>
+<script src="js/easy-button.js"></script>
 <!-- Add fancyBox main JS and CSS files -->
 <script type="text/javascript" src="js/fancyBox/source/jquery.fancybox.pack.js"></script>
 <link rel="stylesheet" type="text/css" href="js/fancyBox/source/jquery.fancybox.css" />
@@ -49,5 +52,10 @@
 <body id="travelling">
 	<div id="globalMap" style="height: 100%;width: 100%;"></div>									    
 	<script type="text/javascript" src="js/travelling.js"></script>
+	<script type="text/javascript">
+		L.easyButton( '<img src="images/back.png">', function(){
+			window.open(window.location.origin + "/html/travelling.html","_self")
+		}).addTo(myGlobalMap);
+			</script>
 </body>
 </html>
