fix missing exif data bug on ios

--- a/html/travellingFullscreen.html
+++ b/html/travellingFullscreen.html
@@ -23,6 +23,7 @@
 <script type="text/javascript" src="js/Leaflet.Arc.min.js"></script>
 <script type="text/javascript" src="data/cities.js"></script>
 <script type="text/javascript" src="data/tracks.js"></script>
+<script type="text/javascript" src="data/latlng.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.growl.js"></script>
