--- a/html/travelling.html
+++ b/html/travelling.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="css/jquery.growl.css">
 
 <script type="text/javascript" src="js/leaflet.js"></script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
+<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyDgDMgGYKossMJE1xWFyWhqT83Enml5D8A&v=3.2&sensor=false""></script>
 <script type="text/javascript" src="http://matchingnotes.com/javascripts/leaflet-google.js"></script>
 <script type="text/javascript" src="js/arc.js"></script>
 <script type="text/javascript" src="js/Leaflet.Arc.min.js"></script>
