--- a/html/travellingFullscreen.html
+++ b/html/travellingFullscreen.html
@@ -18,7 +18,7 @@
 
 <script type="text/javascript" src="js/leaflet.js"></script>
 <!-- -->
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
+<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyDgDMgGYKossMJE1xWFyWhqT83Enml5D8A&v=3.2&sensor=false""></script>
 <script type="text/javascript" src="http://matchingnotes.com/javascripts/leaflet-google.js"></script>
 
 <script type="text/javascript" src="js/arc.js"></script>
