--- a/html/travelling.html
+++ b/html/travelling.html
@@ -27,6 +27,8 @@
 <!-- Add fancyBox main JS and CSS files -->
 <script type="text/javascript" src="js/fancyBox/source/jquery.fancybox.pack.js"></script>
 <link rel="stylesheet" type="text/css" href="js/fancyBox/source/jquery.fancybox.css" />
+<link rel="stylesheet" href="js/fancyBox/source/helpers/jquery.fancybox-thumbs.css" type="text/css" media="screen" />
+<script type="text/javascript"   src="js/fancyBox/source/helpers/jquery.fancybox-thumbs.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
 			/*
