add art, travel text

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                     <div class="project-info">
                         <h3><b>Exploring the world</b></h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            In my free time I love to travel the world, doesnt matter if in india on a Royal Enfield or in Mongolia on a horse back. 
                         </p>
                         <a href="travelling/travellingFullscreen.html">View trajectory</a>
                     </div>
@@ -473,7 +473,7 @@
                     <div class="project-info">
                         <h3><b>Airbrush, water color and more!</b></h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Since a youngster I was interessed in color and drawings, which resulted into learning and experimenting with different methods to create art. 
                         </p>
                         <a href="art/art.html">View Gallery</a>
                     </div>
