--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div id="lead-content">
             <h1>Alexander Lelidis</h1>
             <h2>Computer scientist</h2>
-            <a href="pdf/cv.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="https://raw.githubusercontent.com/alexus37/Awesome-CV/master/examples/cv.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
