add game dev project

--- a/index.html
+++ b/index.html
@@ -213,6 +213,23 @@
         <div class="container">
             <div class="row">
                 <div class="project shadow-large">
+                        <div class="project-image">
+                            <img src="images/game.png" width="300" height="300" />
+                        </div>
+                        <!-- End .project-image -->
+                        <div class="project-info">
+                            <h3><b>Game dev: That failed bank robbery</b></h3>
+                            <p>
+                                    That failed bank robbery is a competitive local multiplayer game for 2 or 4 players in which two teams of thieves try to rob the same bank at the same time.
+                                    Drive unlikely vehicles, pick up all the cash, steal your opponent’s loot, use a vast arsenal of different power-ups and get out there before the police catches you!                            
+                                    The game was created as part of the Game Programming Lab at ETH Zürich during spring 2018 and will be presented at the GAMESCOM 2018 in Cologne.
+                            </p>
+                            <a href="http://thatfailedbankrobbery.ch">View Project</a>
+                            <a href="https://www.youtube.com/watch?v=NfyRlZ4NVYo&feature=youtu.be">View trailer</a>
+                        </div>
+                        <!-- End .project-info -->
+                    </div>
+                <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/nbody.png" width="300" height="300" />
                     </div>
