--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hello friends, I am Alexander Lelidis, and I’m a 4th year Computer Science student doing my masters degree here at ETH Zurich. I am interessed in computer graphics, computer vision and security. However, I am really open for other things as well. In my free time I like to ski and do art.
+                        Hello friends, I am Alexander Lelidis, and I’m a 4th year Computer Science student doing my masters degree here at ETH Zurich. I am interessed in computer graphics, computer vision, machine learning and security. However, I am really open for other things as well. In my free time I like to ski and do art.
                     </p>
                 </div>
             </div>
@@ -120,6 +120,7 @@
             <li>tornado</li>
             <li>flask</li>
             <li>cgal</li>
+            <li>boost</li>
             <li>HTML</li>
             <li>assembler</li>
             <li>PHP</li>
@@ -212,6 +213,51 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/aml.png" width="300" height="300" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3><b>Advanced machine learning</b></h3>
+                        <p>
+                            This project consists of 5 subprojects in the medical subfield of machine learning. 
+                            Various tasks like multi class classification and regression were performed. This task were takled 
+                            using LSTMs, decision trees or suport vector machines.  
+
+                        </p>
+                        <a href="https://alexus37.github.io/AML-18/">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/gan.png" width="300" height="300" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3><b>FFTGAN: Generative Adversarial Network system for generating cosmological images in the frequency space</b></h3>
+                        <p>
+                            In this project, we discuss techniques to quantify
+                            quality of cosmological images in the frequency domain.
+                            The problem consists of two parts. First, we had to find a
+                            way to quantify the concept of a ”cosmological image”. Second, we had
+                            to use knowledge and results which we obtained to generate
+                            a ”cosmological image”. The images
+                            are large in size, which required careful choice of techniques
+                            for discrimination and generation. Our research show that classification 
+                            on images which have strong local characteristics, which
+                            don’t have a fixed global location can be
+                            accomplished better in the frequency domain.
+                        </p>
+                        <a href="pdf/gan.pdf">Download report</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
                 <div class="project shadow-large">
                         <div class="project-image">
                             <img src="images/game.png" width="300" height="300" />
