--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             <li>AngularJs</li>
             <li>Ionic</li>
             <li>React</li>
+            <li>Redux</li>
             <li>React-Native</li>
             <li>Java</li>
             <li>C</li>
@@ -134,15 +135,26 @@
             <li>mapbox</li>
             <li>OSMR</li>
             <li>bootstrap</li>
+            <li>linux</li>
         </ul>
     </div>
 
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="Spring 2016 – now">
+            <div data-date="Spring 2019 – now">
+                    <h3>ESRI</h3>
+                    <h4>Software Engineer</h4>
+                    <p>
+                        ARCGIS URBAN<br/>
+                        Make planning more creative and more productive in react <br/>
+                        ArcGIS Urban is a collection of web-based and desktop <br />
+                        tools to help you create and manage plans and projects
+                    </p>
+                </div>
+            <div data-date="Spring 2016 – Winter 2019">
                 <h3>Antavi GmbH</h3>
-                <h4>Software Engineer, Intern</h4>
+                <h4>Software Engineer</h4>
                 <p>
                     Crowd management<br/>
                     Development of command, control and communications system in react <br/>
@@ -163,7 +175,7 @@
 
             <div data-date="Fall 2012 – Spring 2016">
                 <h3>WeltWeitBau GmbH</h3>
-                <h4>Software Engineer, Intern</h4>
+                <h4>Software Engineer</h4>
                 <p>
                     Development of software civil engineering informatics (vbs, java, c++)<br/>
                     Automatisation of software quality assurance<br/>
