add 2 new skills

--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
             <li>Ionic</li>
             <li>React</li>
             <li>Redux</li>
+            <li>Jest</li>
+            <li>Redux-Saga</li>
             <li>React-Native</li>
             <li>Java</li>
             <li>C</li>
@@ -233,9 +235,9 @@
                     <div class="project-info">
                         <h3><b>Advanced machine learning</b></h3>
                         <p>
-                            This project consists of 5 subprojects in the medical subfield of machine learning. 
-                            Various tasks like multi class classification and regression were performed. This task were takled 
-                            using LSTMs, decision trees or suport vector machines.  
+                            This project consists of 5 subprojects in the medical subfield of machine learning.
+                            Various tasks like multi class classification and regression were performed. This task were takled
+                            using LSTMs, decision trees or suport vector machines.
 
                         </p>
                         <a href="https://alexus37.github.io/AML-18/">View Project</a>
@@ -259,7 +261,7 @@
                             to use knowledge and results which we obtained to generate
                             a ”cosmological image”. The images
                             are large in size, which required careful choice of techniques
-                            for discrimination and generation. Our research show that classification 
+                            for discrimination and generation. Our research show that classification
                             on images which have strong local characteristics, which
                             don’t have a fixed global location can be
                             accomplished better in the frequency domain.
@@ -279,7 +281,7 @@
                             <h3><b>Game dev: That failed bank robbery</b></h3>
                             <p>
                                     That failed bank robbery is a competitive local multiplayer game for 2 or 4 players in which two teams of thieves try to rob the same bank at the same time.
-                                    Drive unlikely vehicles, pick up all the cash, steal your opponent’s loot, use a vast arsenal of different power-ups and get out there before the police catches you!                            
+                                    Drive unlikely vehicles, pick up all the cash, steal your opponent’s loot, use a vast arsenal of different power-ups and get out there before the police catches you!
                                     The game was created as part of the Game Programming Lab at ETH Zürich during spring 2018 and will be presented at the GAMESCOM 2018 in Cologne.
                             </p>
                             <a href="http://thatfailedbankrobbery.ch">View Project</a>
@@ -432,7 +434,7 @@
                     <div class="project-info">
                         <h3> <b>Subdivision explorer</b></h3>
                         <p>
-                            This JavaScript page based on three.js use 2 different subdivision algorithms on different meshes and enables the user to specify the abount of iterations. 
+                            This JavaScript page based on three.js use 2 different subdivision algorithms on different meshes and enables the user to specify the abount of iterations.
                         </p>
                         <a href="projects/subdivision/subdivision.html">View Project</a>
                     </div>
@@ -523,7 +525,7 @@
                     <div class="project-info">
                         <h3><b>Exploring the world</b></h3>
                         <p>
-                            In my free time I love to travel the world, doesnt matter if in india on a Royal Enfield or in Mongolia on a horse back. 
+                            In my free time I love to travel the world, doesnt matter if in india on a Royal Enfield or in Mongolia on a horse back.
                         </p>
                         <a href="travelling/travellingFullscreen.html">View trajectory</a>
                     </div>
@@ -548,7 +550,7 @@
                     <div class="project-info">
                         <h3><b>Airbrush, water color and more!</b></h3>
                         <p>
-                            Since a youngster I was interessed in color and drawings, which resulted into learning and experimenting with different methods to create art. 
+                            Since a youngster I was interessed in color and drawings, which resulted into learning and experimenting with different methods to create art.
                         </p>
                         <a href="art/art.html">View Gallery</a>
                     </div>
@@ -593,7 +595,7 @@
                         <li>
                             <a href="https://github.com/alexus37" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
-                        
+
                         <li>
                             <a href="https://bitbucket.org/Alexus/" target="_blank"><i class="fa fa-bitbucket" aria-hidden="true"></i></a>
                         </li>
