--- a/index.html
+++ b/index.html
@@ -527,6 +527,7 @@
                         <p>
                             In my free time I love to travel the world, doesnt matter if in india on a Royal Enfield or in Mongolia on a horse back.
                         </p>
+                        <a href="travelling/travellingFullscreen_v2.html">View Stats</a>
                         <a href="travelling/travellingFullscreen.html">View trajectory</a>
                     </div>
                     <!-- End .project-info -->
