--- a/travelling/travellingFullscreen_v2.html
+++ b/travelling/travellingFullscreen_v2.html
@@ -14,6 +14,7 @@
         margin: 0;
         height: 100%;
         width: 100%;
+        background-color: #232227;
       }
 
       #container {
@@ -40,6 +41,7 @@
         overflow-y: auto;
         display: flex;
         background-color: #232227;
+        min-width: 1200px;
       }
       #travelDist svg {
         height: 400px;
@@ -49,17 +51,17 @@
       #countries {
         height: 400px;
         width: 600px;
-        background-color: #232227;
+
       }
       svg text {
         fill: white;
       }
 
       .nv-x text{
-        font-size: 40px;
+        font-size: 30px !important;
       }
       .nv-bar text {
-        fill: white;
+        fill: white !important;
       }
 
     </style>
