--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="css/styles.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/96/three.min.js"></script>
     <script src="js/vanta.net.min.js"></script>
+    <script src="js/vanta.birds.min.js"></script>
 </head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111763271-1"></script>
@@ -77,7 +78,6 @@
         </div>
         <!-- End #lead-content -->
 
-        <div id="lead-overlay"></div>
 
         <div id="lead-down">
             <span>
