add hg2g project

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         <h2 class="heading">Skills</h2>
         <ul>
             <li>ES6</li>
+            <li>TS</li>
             <li>JavaScript</li>
             <li>Python</li>
             <li>Ruby</li>
@@ -125,6 +126,12 @@
             <li>SQL</li>
             <li>C++</li>
             <li>Ruby on Rails</li>
+            <li>Express</li>
+            <li>Postgres</li>
+            <li>graphQL</li>
+            <li>ESRI AGO</li>
+            <li>Metabase</li>
+            <li>Node</li>
             <li>CouchDB</li>
             <li>mongoDB</li>
             <li>tornado</li>
@@ -227,6 +234,22 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/hg2g.jpg" width="300" height="300" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3><b>Hitchhiker's guide to the galaxy door</b></h3>
+                        <p>
+                            Inspired by the movie hitchhiker's guide to the galaxy I created a small system,
+                            which replicates the behavior of the doors in the spaceship.
+                        </p>
+                        <a href="https://alexus37.github.io/hg2gDoor/index.html">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/aml.png" width="300" height="300" />
