add masterthesis to website

--- a/index.html
+++ b/index.html
@@ -595,6 +595,39 @@
         <div class="row">
           <div class="project shadow-large">
             <div class="project-image">
+              <img src="images/masterThesis.png" width="300" height="300" />
+            </div>
+            <!-- End .project-image -->
+            <div class="project-info">
+              <h3>
+                <b
+                  >Invisible to Machine Perception: Attacking Pose Estimators
+                  with Attribution Methods</b
+                >
+              </h3>
+              <p style="font-size: 0.75em;">
+                Neural networks are currently the most accurate techniques to
+                tackle computer vision problems. However, with the increase of
+                accuracy, an increase in complexity has emerged leading to
+                black- box systems. This is especially problematic in
+                safety-critical situations. In this thesis, we are using various
+                attribution methods in 2D or 3D to understand a human pose
+                estimation model. During this process, we develop a new method
+                for the 3D attribution case, called 3D Saliency map. To test the
+                robustness of this model we identify adversarial examples in 2D
+                and propose a new method in the 3D domain for computing
+                adversarial texture for clothing. We show that our approach
+                works by rendering a video of simulated meshes with and without
+                the adversarial texture and feeding into the human pose
+                estimator. To quantify the results we develop three different
+                metrics, measuring various aspects of the attacks.
+              </p>
+              <a href="pdf/masterThesis.pdf">Download Thesis</a>
+            </div>
+            <!-- End .project-info -->
+          </div>
+          <div class="project shadow-large">
+            <div class="project-image">
               <img src="images/bumpySphere.png" width="300" height="300" />
             </div>
             <!-- End .project-image -->
