update website with newest info

--- a/index.html
+++ b/index.html
@@ -123,7 +123,6 @@
         <li>JavaScript</li>
         <li>Python</li>
         <li>Ruby</li>
-        <li>VBA</li>
         <li>Node.js</li>
         <li>AngularJs</li>
         <li>Ionic</li>
@@ -174,44 +173,74 @@
         <div data-date="Spring 2019 – now">
           <h3>ESRI</h3>
           <h4>Software Engineer</h4>
-          <p>
-            ARCGIS URBAN<br />
-            Make planning more creative and more productive in react <br />
-            ArcGIS Urban is a collection of web-based and desktop <br />
-            tools to help you create and manage plans and projects
-          </p>
+          <ul>
+            <li>
+              Development of urban planning software in the 3D space in the
+              browser using React and the ESRI Js API
+            </li>
+            <li>
+              Research, design and implementation of streetview integration in
+              ARCGis Urban resulting in two opensource packages on NPM
+            </li>
+            <li>
+              Planning and execution of telemetry gathering using AWS-Redshift
+              and Metabase increasing user feedback
+            </li>
+          </ul>
         </div>
         <div data-date="Spring 2016 – Winter 2019">
           <h3>Antavi GmbH</h3>
           <h4>Software Engineer</h4>
-          <p>
-            Crowd management<br />
-            Development of command, control and communications system in react
-            <br />
-            GIS data analysis
-          </p>
+          <ul>
+            <li>
+              Design and development of command, control and communication
+              systems in React with live updates via pouchdb
+            </li>
+            <li>
+              Scalable Backend and API design in Express running on AWS
+            </li>
+            <li>
+              Processing and visualization of raw GIS data analysis using Mapbox
+              and OSRM
+            </li>
+          </ul>
         </div>
 
         <div data-date="Fall 2014 – Spring 2016">
           <h3>ETH Zurich</h3>
           <h4>Research Assistant at IFT</h4>
-          <p>
-            Mobile crowd analysis <br />
-            Development of web based software for crowd analysis (js, python)<br />
-            Server implementation<br />
-            Web design
-          </p>
+          <ul>
+            <li>
+              Getting insights of big mobile crowd GPS data through the
+              implementation of trajectory analysis in Python
+            </li>
+            <li>
+              Visualization of complex relations by creating web-based software
+              for crowd analysis in Js
+            </li>
+            <li>
+              Research and development of new analysis methods using GPS data to
+              provide crowd flow direction estimates
+            </li>
+          </ul>
         </div>
 
         <div data-date="Fall 2012 – Spring 2016">
           <h3>WeltWeitBau GmbH</h3>
           <h4>Software Engineer</h4>
-          <p>
-            Development of software civil engineering informatics (vbs, java,
-            c++)<br />
-            Automatisation of software quality assurance<br />
-            Web design and marketing
-          </p>
+          <ul>
+            <li>
+              Development of software civil engineering tools in Java and C++
+            </li>
+            <li>
+              Reducing software quality assurance time by implementing continues
+              integration tests with Selenium
+            </li>
+            <li>
+              Teaching training courses for the utilisation of the company’s
+              products to new clients
+            </li>
+          </ul>
         </div>
       </div>
     </div>
@@ -221,11 +250,13 @@
       <h2 class="heading">Education</h2>
       <div class="education-block">
         <h3>ETH Zurich</h3>
-        <span class="education-date">Sept 2017 - Now</span>
-        <h4>Master of Science in Computer Science</h4>
-        <p>
-          Study track general computer science
-        </p>
+        <span class="education-date">Sept 2017 - Sept 2020</span>
+        <h4>Master of Science in Computer Science (1.3)</h4>
+        <ul>
+          <li>
+            Focus: Machine Learning and Security
+          </li>
+        </ul>
       </div>
       <!-- End .education-block -->
 
@@ -238,8 +269,7 @@
             Exchange program at ETH Zurich
           </li>
           <li>
-            Thesis: STRUCTURE-AWARE SURFACE RECONSTRUCTION WITH SPARSE MOVING
-            LEAST SQUARES (1.0)
+            Focus: Computer Graphics and Computer Vision
           </li>
         </ul>
       </div>
