--- a/index.html
+++ b/index.html
@@ -196,9 +196,7 @@
               Design and development of command, control and communication
               systems in React with live updates via pouchdb
             </li>
-            <li>
-              Scalable Backend and API design in Express running on AWS
-            </li>
+            <li>Scalable Backend and API design in Express running on AWS</li>
             <li>
               Processing and visualization of raw GIS data analysis using Mapbox
               and OSRM
@@ -253,9 +251,8 @@
         <span class="education-date">Sept 2017 - Sept 2020</span>
         <h4>Master of Science in Computer Science (1.3)</h4>
         <ul>
-          <li>
-            Focus: Machine Learning and Security
-          </li>
+          <li>Focus: Machine Learning and Security</li>
+          <li>Joint Thesis with the University of Cambridge</li>
         </ul>
       </div>
       <!-- End .education-block -->
@@ -265,12 +262,8 @@
         <span class="education-date">Oct 2012 - Apr 2016</span>
         <h4>Bachelor of Science in Computer Science (1.9)</h4>
         <ul>
-          <li>
-            Exchange program at ETH Zurich
-          </li>
-          <li>
-            Focus: Computer Graphics and Computer Vision
-          </li>
+          <li>Exchange program at ETH Zurich</li>
+          <li>Focus: Computer Graphics and Computer Vision</li>
         </ul>
       </div>
 
@@ -311,9 +304,7 @@
                 <a href="https://devpost.com/software/should-i-be-worried">
                   View Project
                 </a>
-                <a href="https://youtu.be/0Cu9zd0_aFs">
-                  Video
-                </a>
+                <a href="https://youtu.be/0Cu9zd0_aFs"> Video </a>
               </div>
             </div>
             <!-- End .project-info -->
@@ -635,7 +626,7 @@
                   with Attribution Methods</b
                 >
               </h3>
-              <p style="font-size: 0.75em;">
+              <p style="font-size: 0.75em">
                 Neural networks are currently the most accurate techniques to
                 tackle computer vision problems. However, with the increase of
                 accuracy, an increase in complexity has emerged leading to
@@ -805,9 +796,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-5 copyright">
-            <p>
-              Copyright &copy; 2020 Alexander Lelidis
-            </p>
+            <p>Copyright &copy; 2020 Alexander Lelidis</p>
           </div>
           <div class="col-sm-2 top">
             <span id="to-top">
