--- a/index.html
+++ b/index.html
@@ -170,7 +170,21 @@
     <div id="experience" class="background-alt">
       <h2 class="heading">Experience</h2>
       <div id="experience-timeline">
-        <div data-date="Spring 2019 – now">
+        <div data-date="Fall 2020 – now">
+          <h3>ETH Zurich</h3>
+          <h4>Research Assistant at CGL/Disney</h4>
+          <ul>
+            <li>
+              Development of production-level deep learning code in
+              collaboration with Disney.
+            </li>
+            <li>
+              Research of smoke stylization method and develop of a Houdini
+              plugin for neural smoke processing.
+            </li>
+          </ul>
+        </div>
+        <div data-date="Spring 2019 – Summer 2020">
           <h3>ESRI</h3>
           <h4>Software Engineer</h4>
           <ul>
