--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
           </div>
           <div class="col-md-8">
             <p>
-              Hello friends, I am Alexander Lelidis, and I’m a 5th-year Computer
-              Science student doing my master's degree here at ETH Zurich. I am
-              interested in computer graphics, computer vision, machine learning
-              and security. However, I am open for other things as well. In my
-              free time, I like to ski and do art.
+              Hello friend, I am Alexander Lelidis, and a Computer Science
+              gradute from ETH Zurich. I am interested in computer graphics,
+              computer vision, machine learning and security. However, I am open
+              for other things as well. In my free time, I like to ski and do
+              art.
             </p>
           </div>
         </div>
