update job title

--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
       <h2 class="heading">Experience</h2>
       <div id="experience-timeline">
         <div data-date="Fall 2020 – now">
-          <h3>ETH Zurich</h3>
-          <h4>Research Assistant at CGL/Disney</h4>
+          <h3>ETH Zurich / Disney Research Studios</h3>
+          <h4>Research Assistant</h4>
           <ul>
             <li>
               Development of production-level deep learning code in
