--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
           </div>
           <div class="col-md-8">
             <p>
-              Hello friend, I am Alexander Lelidis, and a Computer Science
-              gradute from ETH Zurich. I am interested in computer graphics,
+              Hello friend, I am Alexander Lelidis, a computer scientist
+              from ETH Zurich. I am interested in computer graphics,
               computer vision, machine learning and security. However, I am open
               for other things as well. In my free time, I like to ski and do
               art.
@@ -118,10 +118,12 @@
     <div id="skills">
       <h2 class="heading">Skills</h2>
       <ul>
-        <li>ES6</li>
+        <li>PyTorch</li>
+        <li>Tensorflow</li>
+        <li>Python</li>
+        <li>C++</li>
         <li>TS</li>
         <li>JavaScript</li>
-        <li>Python</li>
         <li>Ruby</li>
         <li>Node.js</li>
         <li>AngularJs</li>
@@ -134,7 +136,6 @@
         <li>Java</li>
         <li>C</li>
         <li>SQL</li>
-        <li>C++</li>
         <li>Ruby on Rails</li>
         <li>Express</li>
         <li>Postgres</li>
@@ -179,7 +180,7 @@
               collaboration with Disney.
             </li>
             <li>
-              Research of smoke stylization method and develop of a Houdini
+              Research of a smoke stylization method and development of a Houdini
               plugin for neural smoke processing.
             </li>
           </ul>
@@ -208,7 +209,7 @@
           <ul>
             <li>
               Design and development of command, control and communication
-              systems in React with live updates via pouchdb
+              systems in React with live updates via pouchDB
             </li>
             <li>Scalable Backend and API design in Express running on AWS</li>
             <li>
@@ -455,10 +456,10 @@
             <div class="project-info">
               <h3><b>tripTrackr</b></h3>
               <p>
-                The motivation behinde this project was to understand the full
-                stack developement of an app with including backend. Therefore I
-                choose to create a travel app, where users can create a personal
-                webpage with the travel trajectory and share it with friends.
+                The motivation behind this project was to understand the full
+                stack developement of an app including a backend. Therefore I
+                chose to create a travel app, where users can create a personal
+                webpage with their travel trajectory and share it with friends.
               </p>
               <a href="https://www.triptrackr.de/">View Project</a>
             </div>
@@ -526,7 +527,7 @@
               <p>
                 I want to render a complicated forest scene in the morning. The
                 scene should contain a rarely used train track on which you can
-                see a very old Swiss made train approaching. The train will be a
+                see a very old Swiss-made train approaching. The train will be a
                 steam locomotive, which emits a lot of dark steam. Because the
                 scene takes place in the morning it will be very foggy, so that
                 you can see the sun rays passing through the forest canopy. To
@@ -551,7 +552,7 @@
               <h3><b>Thermal augmented reality chess </b></h3>
               <p>
                 The goal of this project was to create an augmented reality
-                chess game. We used two cameras - an RGB-D camera and a thermal
+                chess game. To achieve thie we used two cameras - a RGB-D camera and a thermal
                 camera. The RGB camera is used to track a paper checkerboard
                 with augmented reality markers which are used to estimate the
                 pose of the camera. The video with the resulting camera matrix
@@ -572,50 +573,11 @@
             <div class="project-info">
               <h3><b>N-body simulation using particles </b></h3>
               <p>
-                In that project I wanted to learn the basics of three.js and
+                I wanted to learn the basics of three.js and
                 implement a simple particle based n-body simulation. The whole
-                simulation runs in the browser in real time and enables to
-                change parameters on the fly.
+                simulation runs in the browser in real time and allows parameter changes on the fly.
               </p>
               <a href="projects/particles/index.html">View Project</a>
-            </div>
-            <!-- End .project-info -->
-          </div>
-
-          <div class="project shadow-large">
-            <div class="project-image">
-              <img src="images/brdf.png" width="300" height="300" />
-            </div>
-            <!-- End .project-image -->
-            <div class="project-info">
-              <h3><b>BRDF explorer </b></h3>
-              <p>
-                To get a better understanding of Bidirectional Reflectance
-                Distribution Function, I implemented a viewer using GLSL to
-                visualize the different effects of various BRDFs. Due to the GPU
-                implementation, the user can change input parameters for the
-                function during the run time and directly see the effect.
-                Additionally, I added costum BRDFs using procedual noise to
-                create interesting materials.
-              </p>
-              <a href="projects/brdf/brdf.html">View Project</a>
-            </div>
-            <!-- End .project-info -->
-          </div>
-
-          <div class="project shadow-large">
-            <div class="project-image">
-              <img src="images/subdivision.png" width="300" height="300" />
-            </div>
-            <!-- End .project-image -->
-            <div class="project-info">
-              <h3><b>Subdivision explorer</b></h3>
-              <p>
-                This JavaScript page based on three.js use 2 different
-                subdivision algorithms on different meshes and enables the user
-                to specify the abount of iterations.
-              </p>
-              <a href="projects/subdivision/subdivision.html">View Project</a>
             </div>
             <!-- End .project-info -->
           </div>
@@ -830,17 +792,6 @@
                   ><i class="fa fa-bitbucket" aria-hidden="true"></i
                 ></a>
               </li>
-              <!--
-                        <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                        </li>
-                        -->
             </ul>
           </div>
         </div>
