--- a/index.html
+++ b/index.html
@@ -124,14 +124,7 @@
         <li>C++</li>
         <li>TS</li>
         <li>JavaScript</li>
-        <li>Ruby</li>
-        <li>Node.js</li>
-        <li>AngularJs</li>
-        <li>Ionic</li>
         <li>React</li>
-        <li>Redux</li>
-        <li>Redux-Saga</li>
-        <li>Jest</li>
         <li>React-Native</li>
         <li>Java</li>
         <li>C</li>
@@ -142,28 +135,20 @@
         <li>graphQL</li>
         <li>ESRI AGO</li>
         <li>Metabase</li>
+        <li>Houdini</li>
         <li>CouchDB</li>
         <li>mongoDB</li>
         <li>tornado</li>
         <li>flask</li>
         <li>cgal</li>
         <li>boost</li>
-        <li>HTML</li>
-        <li>JSX</li>
         <li>assembler</li>
-        <li>PHP</li>
-        <li>svg</li>
-        <li>leaflet</li>
         <li>django</li>
         <li>ROS</li>
         <li>GLSL</li>
         <li>openGL</li>
         <li>OSG</li>
-        <li>mapbox</li>
         <li>OSMR</li>
-        <li>CSS</li>
-        <li>SASS</li>
-        <li>bootstrap</li>
         <li>linux</li>
       </ul>
     </div>
@@ -172,12 +157,11 @@
       <h2 class="heading">Experience</h2>
       <div id="experience-timeline">
         <div data-date="Fall 2020 – now">
-          <h3>ETH Zurich / Disney Research Studios</h3>
-          <h4>Research Assistant</h4>
+          <h3>Disney Research Studios</h3>
+          <h4>Machine Learning Research Engineer</h4>
           <ul>
             <li>
-              Development of production-level deep learning code in
-              collaboration with Disney.
+              Development of production-level deep learning code used with 3 movies for over 10000 frames.
             </li>
             <li>
               Research of a smoke stylization method and development of a Houdini
