--- a/index.html
+++ b/index.html
@@ -157,6 +157,15 @@
       <h2 class="heading">Experience</h2>
       <div id="experience-timeline">
         <div data-date="Fall 2020 – now">
+          <h3>Microsoft</h3>
+          <h4>Senior Software Engineer</h4>
+          <ul>
+            <li>
+              Work full stack for Github
+            </li>
+          </ul>
+        </div>
+        <div data-date="Sep 2020 – Oct 2021">
           <h3>Disney Research Studios</h3>
           <h4>Machine Learning Research Engineer</h4>
           <ul>
@@ -169,7 +178,7 @@
             </li>
           </ul>
         </div>
-        <div data-date="Spring 2019 – Summer 2020">
+        <div data-date="Feb 2019 – Jun 2020">
           <h3>ESRI</h3>
           <h4>Software Engineer</h4>
           <ul>
@@ -187,7 +196,7 @@
             </li>
           </ul>
         </div>
-        <div data-date="Spring 2016 – Winter 2019">
+        <div data-date="Mar 2016 – Dec 2019">
           <h3>Antavi GmbH</h3>
           <h4>Software Engineer</h4>
           <ul>
@@ -203,7 +212,7 @@
           </ul>
         </div>
 
-        <div data-date="Fall 2014 – Spring 2016">
+        <div data-date="Sep 2014 – Mar 2016">
           <h3>ETH Zurich</h3>
           <h4>Research Assistant at IFT</h4>
           <ul>
@@ -222,7 +231,7 @@
           </ul>
         </div>
 
-        <div data-date="Fall 2012 – Spring 2016">
+        <div data-date="Sep 2012 – Mar 2016">
           <h3>WeltWeitBau GmbH</h3>
           <h4>Software Engineer</h4>
           <ul>
@@ -247,7 +256,7 @@
       <h2 class="heading">Education</h2>
       <div class="education-block">
         <h3>ETH Zurich</h3>
-        <span class="education-date">Sept 2017 - Sept 2020</span>
+        <span class="education-date">Sep 2017 - Sep 2020</span>
         <h4>Master of Science in Computer Science (1.3)</h4>
         <ul>
           <li>Focus: Machine Learning and Security</li>
